--- a/part3/coursecontent/.github/workflows/fly.yml
+++ b/part3/coursecontent/.github/workflows/fly.yml
@@ -1,10 +1,10 @@
-name: Fly Deploy
+name: deploy-web
 on: [push]
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
   deploy:
-      name: Deploy app
+      name: deploy-web
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
