--- a/part3/coursecontent/fly.toml
+++ b/part3/coursecontent/fly.toml
@@ -1,6 +1,6 @@
-# fly.toml file generated for deploy-web on 2023-03-28T01:06:39+08:00
+# fly.toml file generated for late-brook-8775 on 2023-03-28T01:52:39+08:00
 
-app = "deploy-web"
+app = "late-brook-8775"
 kill_signal = "SIGINT"
 kill_timeout = 5
 mounts = []
