--- a/part3/phonebook backend/package.json
+++ b/part3/phonebook backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../phonebook frontend && npm run build && cp -r build ../phonebook backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "author": "Khoo Hau Zhe",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.38.0",
     "nodemon": "^2.0.21"
   }
 }
